--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepublishOnly": "node lib/aesprim.js > generated/aesprim-browser.js",
     "test": "mocha -u tdd test && jscs lib && jshint lib",
-    "generate": "node bin/generate_parser.js > generated/parser.js"
+    "generate": "node bin/generate_parser.js > generated/parser.js",
+    "build": "grunt default"
   },
   "dependencies": {
     "esprima": "1.2.2",
